# playground

./: README.md
dev-commands/: .env.example  .gitignore  README.md  bun.lockb  commands.lock.json  nodemon.json  package.json  tsconfig.json
dev-commands/src/: index.ts
dev-commands/src/commands/util/: add.ts  ping.ts  sqrt.ts
dev-commands/src/interactions/commands/util/: add.ts  ping.ts  sqrt.ts
dev-commands/src/scripts/: devLockfile.ts  lockfile.ts
dev-commands/src/structures/: Command.ts
dev-commands/src/util/: guards.ts  index.ts  respond.ts  testing.ts
inherits-demo/: .env  Cargo.toml  README.md  docker-compose.yml
inherits-demo/migrations/: 0_init.sql
inherits-demo/src/: main.rs
