[package]
name = "inherits-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[profile.dev.package.sqlx-macros]
opt-level = 3

[build-dependencies]
syn = "1"
